pridane oznamy a podpora obrazkov cez azure blob storage
